--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -173,7 +173,7 @@
 
   <script type="text/babel">
     const { useState, useEffect } = React;
-    const API_BASE = "http://localhost:3001/api/users";
+    const API_BASE = "https://tiep-cicd-2799.web.app/";
 
     function SearchBar({ value, onChange }) {
       return (
